# cargo-kcov

./: Cargo.toml
.github/workflows/: rust.yml
src/: cargo.rs  errors.rs  install_kcov.sh  main.rs  target_finder.rs
