[package]
name = "cargo-kcov"
version = "0.5.4"
authors = ["kennytm <kennytm@gmail.com>"]
description = "Cargo subcommand to run kcov to get coverage report on Linux"
repository = "https://github.com/kennytm/cargo-kcov"
keywords = ["cargo", "subcommand", "kcov", "coverage"]
license = "MIT"
edition = "2021"

[badges]
travis-ci = { repository = "kennytm/cargo-kcov" }

[dependencies]
clap = {version = "3", features = ["cargo"]}
shlex = "1.1"
term = "0.7"
serde_json = "1"
regex = "1"
open = "3"

[dev-dependencies]
rquery = "0.4"
tempdir = "0.3"

